--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ modules/elements/__pycache__/topscorer.cpython-310.pyc
 modules/elements/__pycache__/previous_games.cpython-310.pyc
 modules/elements/__pycache__/upcoming_game.cpython-310.pyc
 *.pyc
+/cache
